[package]
name = "ulink"
version = "0.1.0"
edition = "2018"

[dependencies]
nanoid = "0.4.0"
url = "2.2.2"
bb8 = "0.7.0"
bb8-redis = "0.9.0"
dotenv = "0.15.0"

[dependencies.redis]
version = "0.20.2"
features = ["tokio-comp"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]
